Fixed alignment issue with couch names.

--- a/styles/default.css
+++ b/styles/default.css
@@ -86,17 +86,21 @@ h2 {
 }
 
 .streamers-text {
-  top: -4.5vh;
-  left: 2vw;
+  margin-top: -4.3vh;
+  width: 17.8vw;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%);
+  -moz-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
   text-align: center;
   position: absolute;
 }
 
 .streamers-header {
   font-size: 24px;
-  margin-bottom: 2.3vh;
+  margin-bottom: 2vh;
 }
 
 .streamers {
-  font-size: 28px;
+  font-size: 26px;
 }
